ingest-node/internal/painless/parser/painless_parser.go
// Code generated from PainlessParser.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // PainlessParser

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type PainlessParser struct {
	*antlr.BaseParser
}

var PainlessParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func painlessparserParserInit() {
	staticData := &PainlessParserParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "'{'", "'}'", "'['", "']'", "'('", "')'", "'$'", "'.'",
		"'?.'", "','", "';'", "'if'", "'in'", "'else'", "'while'", "'do'", "'for'",
		"'continue'", "'break'", "'return'", "'new'", "'try'", "'catch'", "'throw'",
		"'this'", "'instanceof'", "'!'", "'~'", "'*'", "'/'", "'%'", "'+'",
		"'-'", "'<<'", "'>>'", "'>>>'", "'<'", "'<='", "'>'", "'>='", "'=='",
		"'==='", "'!='", "'!=='", "'&'", "'^'", "'|'", "'&&'", "'||'", "'?'",
		"':'", "'?:'", "'::'", "'->'", "'=~'", "'==~'", "'++'", "'--'", "'='",
		"'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'^='", "'|='", "'<<='",
		"'>>='", "'>>>='", "", "", "", "", "", "", "'true'", "'false'", "'null'",
		"", "'def'",
	}
	staticData.SymbolicNames = []string{
		"", "WS", "COMMENT", "LBRACK", "RBRACK", "LBRACE", "RBRACE", "LP", "RP",
		"DOLLAR", "DOT", "NSDOT", "COMMA", "SEMICOLON", "IF", "IN", "ELSE",
		"WHILE", "DO", "FOR", "CONTINUE", "BREAK", "RETURN", "NEW", "TRY", "CATCH",
		"THROW", "THIS", "INSTANCEOF", "BOOLNOT", "BWNOT", "MUL", "DIV", "REM",
		"ADD", "SUB", "LSH", "RSH", "USH", "LT", "LTE", "GT", "GTE", "EQ", "EQR",
		"NE", "NER", "BWAND", "XOR", "BWOR", "BOOLAND", "BOOLOR", "COND", "COLON",
		"ELVIS", "REF", "ARROW", "FIND", "MATCH", "INCR", "DECR", "ASSIGN",
		"AADD", "ASUB", "AMUL", "ADIV", "AREM", "AAND", "AXOR", "AOR", "ALSH",
		"ARSH", "AUSH", "OCTAL", "HEX", "INTEGER", "DECIMAL", "STRING", "REGEX",
		"TRUE", "FALSE", "NULL", "PRIMITIVE", "DEF", "ID", "DOTINTEGER", "DOTID",
	}
	staticData.RuleNames = []string{
		"source", "function", "parameters", "statement", "rstatement", "dstatement",
		"trailer", "block", "empty", "initializer", "afterthought", "declaration",
		"decltype", "type", "declvar", "trap", "noncondexpression", "expression",
		"unary", "unarynotaddsub", "castexpression", "primordefcasttype", "refcasttype",
		"chain", "primary", "postfix", "postdot", "callinvoke", "fieldaccess",
		"braceaccess", "arrayinitializer", "listinitializer", "mapinitializer",
		"maptoken", "arguments", "argument", "lambda", "lamtype", "funcref",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// PainlessParserInit initializes any static state used to implement PainlessParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewPainlessParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func PainlessParserInit() {
	staticData := &PainlessParserParserStaticData
	staticData.once.Do(painlessparserParserInit)
}

// NewPainlessParser produces a new parser instance for the optional input antlr.TokenStream.
func NewPainlessParser(input antlr.TokenStream) *PainlessParser {
	PainlessParserInit()
	this := new(PainlessParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &PainlessParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "PainlessParser.g4"

	return this
}

// PainlessParser tokens.
const (
	PainlessParserEOF        = antlr.TokenEOF
	PainlessParserWS         = 1
	PainlessParserCOMMENT    = 2
	PainlessParserLBRACK     = 3
	PainlessParserRBRACK     = 4
	PainlessParserLBRACE     = 5
	PainlessParserRBRACE     = 6
	PainlessParserLP         = 7
	PainlessParserRP         = 8
	PainlessParserDOLLAR     = 9
	PainlessParserDOT        = 10
	PainlessParserNSDOT      = 11
	PainlessParserCOMMA      = 12
	PainlessParserSEMICOLON  = 13
	PainlessParserIF         = 14
	PainlessParserIN         = 15
	PainlessParserELSE       = 16
	PainlessParserWHILE      = 17
	PainlessParserDO         = 18
	PainlessParserFOR        = 19
	PainlessParserCONTINUE   = 20
	PainlessParserBREAK      = 21
	PainlessParserRETURN     = 22
	PainlessParserNEW        = 23
	PainlessParserTRY        = 24
	PainlessParserCATCH      = 25
	PainlessParserTHROW      = 26
	PainlessParserTHIS       = 27
	PainlessParserINSTANCEOF = 28
	PainlessParserBOOLNOT    = 29
	PainlessParserBWNOT      = 30
	PainlessParserMUL        = 31
	PainlessParserDIV        = 32
	PainlessParserREM        = 33
	PainlessParserADD        = 34
	PainlessParserSUB        = 35
	PainlessParserLSH        = 36
	PainlessParserRSH        = 37
	PainlessParserUSH        = 38
	PainlessParserLT         = 39
	PainlessParserLTE        = 40
	PainlessParserGT         = 41
	PainlessParserGTE        = 42
	PainlessParserEQ         = 43
	PainlessParserEQR        = 44
	PainlessParserNE         = 45
	PainlessParserNER        = 46
	PainlessParserBWAND      = 47
	PainlessParserXOR        = 48
	PainlessParserBWOR       = 49
	PainlessParserBOOLAND    = 50
	PainlessParserBOOLOR     = 51
	PainlessParserCOND       = 52
	PainlessParserCOLON      = 53
	PainlessParserELVIS      = 54
	PainlessParserREF        = 55
	PainlessParserARROW      = 56
	PainlessParserFIND       = 57
	PainlessParserMATCH      = 58
	PainlessParserINCR       = 59
	PainlessParserDECR       = 60
	PainlessParserASSIGN     = 61
	PainlessParserAADD       = 62
	PainlessParserASUB       = 63
	PainlessParserAMUL       = 64
	PainlessParserADIV       = 65
	PainlessParserAREM       = 66
	PainlessParserAAND       = 67
	PainlessParserAXOR       = 68
	PainlessParserAOR        = 69
	PainlessParserALSH       = 70
	PainlessParserARSH       = 71
	PainlessParserAUSH       = 72
	PainlessParserOCTAL      = 73
	PainlessParserHEX        = 74
	PainlessParserINTEGER    = 75
	PainlessParserDECIMAL    = 76
	PainlessParserSTRING     = 77
	PainlessParserREGEX      = 78
	PainlessParserTRUE       = 79
	PainlessParserFALSE      = 80
	PainlessParserNULL       = 81
	PainlessParserPRIMITIVE  = 82
	PainlessParserDEF        = 83
	PainlessParserID         = 84
	PainlessParserDOTINTEGER = 85
	PainlessParserDOTID      = 86
)

// PainlessParser rules.
const (
	PainlessParserRULE_source            = 0
	PainlessParserRULE_function          = 1
	PainlessParserRULE_parameters        = 2
	PainlessParserRULE_statement         = 3
	PainlessParserRULE_rstatement        = 4
	PainlessParserRULE_dstatement        = 5
	PainlessParserRULE_trailer           = 6
	PainlessParserRULE_block             = 7
	PainlessParserRULE_empty             = 8
	PainlessParserRULE_initializer       = 9
	PainlessParserRULE_afterthought      = 10
	PainlessParserRULE_declaration       = 11
	PainlessParserRULE_decltype          = 12
	PainlessParserRULE_type              = 13
	PainlessParserRULE_declvar           = 14
	PainlessParserRULE_trap              = 15
	PainlessParserRULE_noncondexpression = 16
	PainlessParserRULE_expression        = 17
	PainlessParserRULE_unary             = 18
	PainlessParserRULE_unarynotaddsub    = 19
	PainlessParserRULE_castexpression    = 20
	PainlessParserRULE_primordefcasttype = 21
	PainlessParserRULE_refcasttype       = 22
	PainlessParserRULE_chain             = 23
	PainlessParserRULE_primary           = 24
	PainlessParserRULE_postfix           = 25
	PainlessParserRULE_postdot           = 26
	PainlessParserRULE_callinvoke        = 27
	PainlessParserRULE_fieldaccess       = 28
	PainlessParserRULE_braceaccess       = 29
	PainlessParserRULE_arrayinitializer  = 30
	PainlessParserRULE_listinitializer   = 31
	PainlessParserRULE_mapinitializer    = 32
	PainlessParserRULE_maptoken          = 33
	PainlessParserRULE_arguments         = 34
	PainlessParserRULE_argument          = 35
	PainlessParserRULE_lambda            = 36
	PainlessParserRULE_lamtype           = 37
	PainlessParserRULE_funcref           = 38
)

// ISourceContext is an interface to support dynamic dispatch.
type ISourceContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllFunction() []IFunctionContext
	Function(i int) IFunctionContext
	AllStatement() []IStatementContext
	Statement(i int) IStatementContext

	// IsSourceContext differentiates from other interfaces.
	IsSourceContext()
}

type SourceContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySourceContext() *SourceContext {
	var p = new(SourceContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PainlessParserRULE_source
	return p
}

func InitEmptySourceContext(p *SourceContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PainlessParserRULE_source
}

func (*SourceContext) IsSourceContext() {}

func NewSourceContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SourceContext {
	var p = new(SourceContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PainlessParserRULE_source

	return p
}

func (s *SourceContext) GetParser() antlr.Parser { return s.parser }

func (s *SourceContext) EOF() antlr.TerminalNode {
	return s.GetToken(PainlessParserEOF, 0)
}

func (s *SourceContext) AllFunction() []IFunctionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFunctionContext); ok {
			len++
		}
	}

	tst := make([]IFunctionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFunctionContext); ok {
			tst[i] = t.(IFunctionContext)
			i++
		}
	}

	return tst
}

func (s *SourceContext) Function(i int) IFunctionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunctionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunctionContext)
}

func (s *SourceContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *SourceContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *SourceContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SourceContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SourceContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PainlessParserListener); ok {
		listenerT.EnterSource(s)
	}
}

func (s *SourceContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PainlessParserListener); ok {
		listenerT.ExitSource(s)
	}
}

func (s *SourceContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PainlessParserVisitor:
		return t.VisitSource(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PainlessParser) Source() (localctx ISourceContext) {
	localctx = NewSourceContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PainlessParserRULE_source)
	var _la int

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(81)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(78)
				p.Function()
			}

		}
		p.SetState(83)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}
	p.SetState(87)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&1729382310161040032) != 0) || ((int64((_la-73)) & ^0x3f) == 0 && ((int64(1)<<(_la-73))&4095) != 0) {
		{
			p.SetState(84)
			p.Statement()
		}

		p.SetState(89)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(90)
		p.Match(PainlessParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFunctionContext is an interface to support dynamic dispatch.
type IFunctionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Decltype() IDecltypeContext
	ID() antlr.TerminalNode
	Parameters() IParametersContext
	Block() IBlockContext

	// IsFunctionContext differentiates from other interfaces.
	IsFunctionContext()
}

type FunctionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFunctionContext() *FunctionContext {
	var p = new(FunctionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PainlessParserRULE_function
	return p
}

func InitEmptyFunctionContext(p *FunctionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PainlessParserRULE_function
}

func (*FunctionContext) IsFunctionContext() {}

func NewFunctionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FunctionContext {
	var p = new(FunctionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PainlessParserRULE_function

	return p
}

func (s *FunctionContext) GetParser() antlr.Parser { return s.parser }

func (s *FunctionContext) Decltype() IDecltypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDecltypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDecltypeContext)
}

func (s *FunctionContext) ID() antlr.TerminalNode {
	return s.GetToken(PainlessParserID, 0)
}

func (s *FunctionContext) Parameters() IParametersContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IParametersContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IParametersContext)
}

func (s *FunctionContext) Block() IBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *FunctionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FunctionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FunctionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PainlessParserListener); ok {
		listenerT.EnterFunction(s)
	}
}

func (s *FunctionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PainlessParserListener); ok {
		listenerT.ExitFunction(s)
	}
}

func (s *FunctionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PainlessParserVisitor:
		return t.VisitFunction(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PainlessParser) Function() (localctx IFunctionContext) {
	localctx = NewFunctionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PainlessParserRULE_function)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(92)
		p.Decltype()
	}
	{
		p.SetState(93)
		p.Match(PainlessParserID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(94)
		p.Parameters()
	}
	{
		p.SetState(95)
		p.Block()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IParametersContext is an interface to support dynamic dispatch.
type IParametersContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	LP() antlr.TerminalNode
	RP() antlr.TerminalNode
	AllDecltype() []IDecltypeContext
	Decltype(i int) IDecltypeContext
	AllID() []antlr.TerminalNode
	ID(i int) antlr.TerminalNode
	AllCOMMA() []antlr.TerminalNode
	COMMA(i int) antlr.TerminalNode

	// IsParametersContext differentiates from other interfaces.
	IsParametersContext()
}

type ParametersContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParametersContext() *ParametersContext {
	var p = new(ParametersContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PainlessParserRULE_parameters
	return p
}

func InitEmptyParametersContext(p *ParametersContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PainlessParserRULE_parameters
}

func (*ParametersContext) IsParametersContext() {}

func NewParametersContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParametersContext {
	var p = new(ParametersContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PainlessParserRULE_parameters

	return p
}

func (s *ParametersContext) GetParser() antlr.Parser { return s.parser }

func (s *ParametersContext) LP() antlr.TerminalNode {
	return s.GetToken(PainlessParserLP, 0)
}

func (s *ParametersContext) RP() antlr.TerminalNode {
	return s.GetToken(PainlessParserRP, 0)
}

func (s *ParametersContext) AllDecltype() []IDecltypeContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDecltypeContext); ok {
			len++
		}
	}

	tst := make([]IDecltypeContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDecltypeContext); ok {
			tst[i] = t.(IDecltypeContext)
			i++
		}
	}

	return tst
}

func (s *ParametersContext) Decltype(i int) IDecltypeContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDecltypeContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDecltypeContext)
}

func (s *ParametersContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(PainlessParserID)
}

func (s *ParametersContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(PainlessParserID, i)
}

func (s *ParametersContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(PainlessParserCOMMA)
}

func (s *ParametersContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(PainlessParserCOMMA, i)
}

func (s *ParametersContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParametersContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParametersContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PainlessParserListener); ok {
		listenerT.EnterParameters(s)
	}
}

func (s *ParametersContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PainlessParserListener); ok {
		listenerT.ExitParameters(s)
	}
}

func (s *ParametersContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PainlessParserVisitor:
		return t.VisitParameters(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PainlessParser) Parameters() (localctx IParametersContext) {
	localctx = NewParametersContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, PainlessParserRULE_parameters)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(97)
		p.Match(PainlessParserLP)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(109)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if (int64((_la-82)) & ^0x3f) == 0 && ((int64(1)<<(_la-82))&7) != 0 {
		{
			p.SetState(98)
			p.Decltype()
		}
		{
			p.SetState(99)
			p.Match(PainlessParserID)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(106)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for _la == PainlessParserCOMMA {
			{
				p.SetState(100)
				p.Match(PainlessParserCOMMA)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}
			{
				p.SetState(101)
				p.Decltype()
			}
			{
				p.SetState(102)
				p.Match(PainlessParserID)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

			p.SetState(108)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}

	}
	{
		p.SetState(111)
		p.Match(PainlessParserRP)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Rstatement() IRstatementContext
	Dstatement() IDstatementContext
	SEMICOLON() antlr.TerminalNode
	EOF() antlr.TerminalNode

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PainlessParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PainlessParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)
